--- a/pom.xml
+++ b/pom.xml
@@ -46,5 +46,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 	    <artifactId>hamcrest</artifactId>
 	    <version>2.2</version>
 	</dependency>	
+	
+	<dependency>
+	  <groupId>org.slf4j</groupId>
+	  <artifactId>slf4j-simple</artifactId>
+	  <version>2.0.9</version>
+	</dependency>
+	
   </dependencies>
 </project>
