--- a/pom.xml
+++ b/pom.xml
@@ -53,5 +53,12 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 	  <version>2.0.9</version>
 	</dependency>
 	
+	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+	<dependency>
+	    <groupId>com.fasterxml.jackson.core</groupId>
+	    <artifactId>jackson-databind</artifactId>
+	    <version>2.18.2</version>
+	</dependency>
+	
   </dependencies>
 </project>
